--- a/clients/web/src/index.html
+++ b/clients/web/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
 
-<body>
+<body style="height: 100vh;">
   <app-root></app-root>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
